--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "ee.laboratorium.muselfie",
-    "tns-ios": {
-      "version": "3.4.1"
-    },
     "tns-android": {
       "version": "3.4.2"
     }
   },
   "dependencies": {
     "nativescript-fresco": "^3.0.6",
+    "nativescript-imagepicker": "^5.0.2",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.5.4",
+    "sass-loader": "^6.0.7",
     "tns-core-modules": "3.4.1"
   },
   "devDependencies": {
