--- a/package.json
+++ b/package.json
@@ -6,33 +6,34 @@
   "nativescript": {
     "id": "ee.laboratorium.muselfie",
     "tns-android": {
-      "version": "3.4.2"
+      "version": "4.0.1"
     }
   },
   "dependencies": {
     "nativescript-fresco": "^3.0.6",
-    "nativescript-imagepicker": "^5.0.2",
+    "nativescript-imagepicker": "^6.0.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.5.4",
-    "sass-loader": "^6.0.7",
-    "tns-core-modules": "3.4.1"
+    "tns-core-modules": "4.0.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "~3.1.3",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
+    "clean-webpack-plugin": "~0.1.19",
     "copy-webpack-plugin": "~4.3.0",
     "css-loader": "~0.28.7",
     "extract-text-webpack-plugin": "~3.0.2",
     "lazy": "1.0.11",
-    "nativescript-dev-sass": "^1.3.6",
-    "nativescript-dev-typescript": "~0.6.0",
-    "nativescript-dev-webpack": "~0.9.1",
+    "nativescript-dev-sass": "^1.5.0",
+    "nativescript-dev-typescript": "~0.7.0",
+    "nativescript-dev-webpack": "~0.10.0",
     "nativescript-worker-loader": "~0.8.1",
     "raw-loader": "~0.5.1",
     "resolve-url-loader": "~2.2.1",
-    "typescript": "~2.6.2",
+    "sass-loader": "^7.0.1",
+    "typescript": "~2.7.2",
     "uglifyjs-webpack-plugin": "~1.1.6",
     "webpack": "~3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
