The final page (WIP)

--- a/app/App_Resources/Android/settings.json
+++ b/app/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"ee.laboratorium.muselfie","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"ee.laboratorium.muselfie","minSdkVersion":23,"targetSdkVersion":null}
