--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   },
   "dependencies": {
+    "nativescript-bitmap-factory": "^1.7.1",
     "nativescript-fresco": "^3.0.6",
     "nativescript-imagepicker": "^6.0.0",
     "nativescript-theme-core": "~1.0.4",
