--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nativescript-bitmap-factory": "^1.7.1",
     "nativescript-fresco": "^3.0.6",
     "nativescript-imagepicker": "^6.0.0",
+    "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.5.4",
     "tns-core-modules": "4.0.0"
