--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "raw-loader": "~0.5.1",
     "resolve-url-loader": "~2.2.1",
     "sass-loader": "^7.0.1",
+    "sharp": "^0.20.2",
     "typescript": "~2.7.2",
     "uglifyjs-webpack-plugin": "~1.1.6",
     "webpack": "~3.10.0",
