--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "nativescript-bitmap-factory": "^1.7.1",
+    "nativescript-fonticon": "^1.1.1",
     "nativescript-fresco": "^3.0.6",
     "nativescript-imagepicker": "^6.0.0",
+    "nativescript-material-icons": "^1.0.3",
     "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.5.4",
