--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     }
   },
   "dependencies": {
+    "lowdb": "^1.0.0",
+    "lowdb-nativescript-adapter": "^0.1.0",
     "nativescript-bitmap-factory": "^1.7.1",
     "nativescript-fresco": "^3.0.6",
     "nativescript-imagepicker": "^6.0.0",
@@ -19,6 +21,7 @@
     "tns-core-modules": "4.0.0"
   },
   "devDependencies": {
+    "@types/lowdb": "^1.0.2",
     "awesome-typescript-loader": "~3.1.3",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
