--- a/package.json
+++ b/package.json
@@ -6,43 +6,44 @@
   "nativescript": {
     "id": "ee.laboratorium.muselfie",
     "tns-android": {
-      "version": "4.0.1"
+      "version": "4.1.1"
     }
   },
   "dependencies": {
     "lowdb": "^1.0.0",
     "lowdb-nativescript-adapter": "^0.1.0",
     "nativescript-bitmap-factory": "^1.7.1",
-    "nativescript-fresco": "^3.0.6",
-    "nativescript-imagepicker": "^6.0.0",
+    "nativescript-fresco": "^3.0.7",
+    "nativescript-imagepicker": "^6.0.2",
     "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "~1.0.4",
-    "nativescript-ui-listview": "^3.5.4",
-    "tns-core-modules": "4.0.0"
+    "nativescript-ui-listview": "^3.5.7",
+    "tns-core-modules": "^4.1.0"
   },
   "devDependencies": {
     "@types/lowdb": "^1.0.2",
-    "awesome-typescript-loader": "~3.1.3",
+    "awesome-typescript-loader": "~5.0.0",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
     "clean-webpack-plugin": "~0.1.19",
-    "copy-webpack-plugin": "~4.3.0",
-    "css-loader": "~0.28.7",
+    "copy-webpack-plugin": "~4.5.1",
+    "css-loader": "~0.28.11",
     "extract-text-webpack-plugin": "~3.0.2",
     "lazy": "1.0.11",
     "nativescript-dev-sass": "^1.5.0",
     "nativescript-dev-typescript": "~0.7.0",
-    "nativescript-dev-webpack": "~0.10.0",
-    "nativescript-worker-loader": "~0.8.1",
+    "nativescript-dev-webpack": "^0.12.0",
+    "nativescript-worker-loader": "~0.9.0",
     "raw-loader": "~0.5.1",
     "resolve-url-loader": "~2.2.1",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "~7.0.1",
     "sharp": "^0.20.2",
     "typescript": "~2.7.2",
-    "uglifyjs-webpack-plugin": "~1.1.6",
-    "webpack": "~3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
+    "uglifyjs-webpack-plugin": "~1.2.5",
+    "webpack": "~4.6.0",
+    "webpack-bundle-analyzer": "~2.13.0",
+    "webpack-cli": "~2.1.3",
     "webpack-sources": "~1.1.0"
   }
 }
