--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "ee.laboratorium.muselfie",
     "tns-android": {
-      "version": "4.1.1"
+      "version": "4.1.3"
     }
   },
   "dependencies": {
@@ -15,6 +15,8 @@
     "nativescript-bitmap-factory": "^1.7.1",
     "nativescript-fresco": "^3.0.7",
     "nativescript-imagepicker": "^6.0.2",
+    "nativescript-permissions": "^1.2.3",
+    "nativescript-snackbar": "^3.1.0",
     "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.5.7",
