--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lowdb": "^1.0.0",
     "lowdb-nativescript-adapter": "^0.1.0",
     "nativescript-bitmap-factory": "^1.7.1",
+    "nativescript-carousel": "^3.1.1",
     "nativescript-fresco": "^3.0.7",
     "nativescript-imagepicker": "^6.0.2",
     "nativescript-permissions": "^1.2.3",
